--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.ashish14060.coxandkingsdemo"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
     }
     buildTypes {
         release {
@@ -30,9 +32,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.code.gson:gson:2.2.4'
+
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
-
-
+    implementation files('libs/retrofit-2.0.2.jar')
+    implementation files('libs/okio-1.6.0.jar')
+    implementation files('libs/okhttp-3.2.0.jar')
+    implementation files('libs/converter-gson-2.1.0.jar')
 }
